--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html lang="lv-LV">
-
+<html>
 <head>
-    <title>Start(it)</title>
-    <meta charset="utf-8">
-
+<meta charset="UTF-8">
+<title>Niks, Martinsons </title>
 </head>
-
 <body>
-
-
+<p>Ūdenspolo
+<p>Ūdenspolo ir komandas ūdens sporta veids.<p>
+<p>Ūdenspolo pirmssākumi meklējami 19. gadsimta beigās Anglijā un Skotijā.<p>
+<p>Par olimpiosko sporta veidu tas kļuva jau 1900. gada Vasaras Olimpiskajās spēlēs.<p>
+<p>Sievietes ūdenspolo olimpiskajā turnīrā debitēja tikai 2000. gadā.<p>
+</p>
+<img src="Logo.png" alt="Logo" style="width:128px;height:140px;">
+<img src="Sp1.jpg" alt="Sp1" style="width:128px;height:140px;">
+<img src="Polo.jpg" alt="polo"  style="width:128px;height:140px;">
+<img src="Sp2.jpg" alt="Sp2" style="width:128px;height:140px;">
 </body>
-
-
-</html>
+</html>    
