--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
 <title>Niks, Martinsons </title>
 </head>
 <body>
-<p>Ūdenspolo
-<p>Ūdenspolo ir komandas ūdens sporta veids.<p>
-<p>Ūdenspolo pirmssākumi meklējami 19. gadsimta beigās Anglijā un Skotijā.<p>
-<p>Par olimpiosko sporta veidu tas kļuva jau 1900. gada Vasaras Olimpiskajās spēlēs.<p>
-<p>Sievietes ūdenspolo olimpiskajā turnīrā debitēja tikai 2000. gadā.<p>
-</p>
-<img src="Logo.png" alt="Logo" style="width:128px;height:140px;">
-<img src="Sp1.jpg" alt="Sp1" style="width:128px;height:140px;">
-<img src="Polo.jpg" alt="polo"  style="width:128px;height:140px;">
-<img src="Sp2.jpg" alt="Sp2" style="width:128px;height:140px;">
+<p>Pirmā rindkopa</p>
+<p>Otrā rindkopa</p> 
 </body>
-</html>    
+</html> 
+<table style="width:100%">
+    <tr>
+      <th>Firstname</th>
+      <th>Lastname</th> 
+      <th>Age</th>
+    </tr>
+    <tr>
+      <td>Jill</td>
+      <td>Smith</td> 
+      <td>50</td>
+    </tr>
+    <tr>
+      <td>Eve</td>
+      <td>Jackson</td> 
+      <td>94</td>
+    </tr>
+  </table>   
